fixed miss-aligned text

--- a/styles/main.css
+++ b/styles/main.css
@@ -70,7 +70,3 @@ p {
     border-style: solid;
     border-color: red;
 }
-
-.contact-container{
-    display: flex;
-}
